# speed-cloudflare-cli-rs

./: Cargo.toml  README.md  cfsp.sh
.github/workflows/: release.yml
src/: main.rs
